# Stitch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: context.c.8AF14C5AAB9ECEDC.idx  display.cpp.36A3700E1A24A851.idx  display.h.094AB6C241BCAE68.idx  egl_context.c.D34AEA09642D2049.idx  glfw3.h.BC45E20D95DA7853.idx  glfw3native.h.20264B0B17C47E3F.idx  glx_context.c.98D4E25AFBD5F947.idx  init.c.B966B7416C7560DE.idx  input.c.328530DFA2A93FB4.idx  internal.h.B574C28CCE66DFB5.idx  linux_joystick.c.E983E4704F4996C7.idx  linux_joystick.h.609DB520CB953948.idx  mappings.h.94F22DA727288089.idx  monitor.c.2FF5D78B3C8C6169.idx  null_init.c.CD236C516897AE7C.idx  null_joystick.c.46353EEDD5A77E29.idx  null_joystick.h.7B1C32AAAB50A79E.idx  null_monitor.c.D7D2E575435126D2.idx  null_platform.h.94606D091D1B590B.idx  null_window.c.22421A99BA72DC7E.idx  osmesa_context.c.29D126B66E849438.idx  platform.c.B9FA5D9D5F334331.idx  platform.h.1E6B25D288D9BB3F.idx  posix_module.c.D04430141C80C484.idx  posix_poll.c.384820A94997825B.idx  posix_poll.h.95E16C55B7D0AAEB.idx  posix_thread.c.8F3EB98237B1A66B.idx  posix_thread.h.DDA054018B89E2C5.idx  posix_time.c.E2B5C221C80E1F56.idx  posix_time.h.12CB96B6621B3D8A.idx  shader.cpp.B31B0745BD48EB1C.idx  shader.h.63222864196FA368.idx  vulkan.c.C868077E831C4074.idx  window.c.1502B04936E5BE5E.idx  wl_init.c.77C81B38E0D9AF29.idx  wl_monitor.c.34AD7B752781113A.idx  wl_platform.h.15ED2E1339E887EB.idx  wl_window.c.AD730179818BA143.idx  x11_init.c.04F12F893E7B239D.idx  x11_monitor.c.9661B4DA53805458.idx  (+4 more)
Stitch/Core/: display.cpp  display.h
Stitch/Renderer/: shader.cpp  shader.h
Stitch/include/: stitch.h
Stitch/include/Stitch/: stitch.h
Stitch/src/Core/: display.h
Stitch/src/Debugger/: debugger.cpp  debugger.h
Stitch/src/Gui/: gui.cpp  gui.h
Stitch/src/Renderer/: ib.cpp  ib.h  renderer.cpp  renderer.h  shader.cpp  shader.h  vao.cpp  vao.h
include/Stitch/: debugger.h  gui.h  stitch.h
